--- a/index.html
+++ b/index.html
@@ -30,6 +30,302 @@
     <!-- <script src="js/main.js" defer></script> -->
   </head>
   <body>
-    <!-- ==== header ==== -->
+    <!-- ==== container ==== -->
+    <div class="top-line"></div>
+    <div class="bottom-line"></div>
+    <div class="main-container">
+      <!-- ==== header ==== -->
+      <header>
+        <div id="logo">
+          <a href="index.html">
+            <img
+              src="assets/logo-l.png"
+              alt="Koladele Olaitan Portfolio Logo"
+            />
+          </a>
+        </div>
+
+        <nav>
+          <ul>
+            <li><a href="#about">About Me</a></li>
+            <li><a href="#projects">Projects</a></li>
+            <li>
+              <a href="https://publikphigor.me/blog/" target="_blank">
+                My Blog
+              </a>
+            </li>
+          </ul>
+        </nav>
+
+        <div class="nav-btn">
+          <a href="#" class="btn">Resume</a>
+        </div>
+      </header>
+
+      <!-- ==== Hero ==== -->
+      <div class="hero">
+        <!-- ==== frontend developer background ==== -->
+        <div class="hero-bg"></div>
+
+        <div class="hero-first-half">
+          <h1 class="hero-name">Koladele Olaitan</h1>
+          <p class="hero-text">
+            I build fascinating websites that are mobile responsive. I pay
+            particular attention to SEO best practices, speed optimization and
+            accesibility.
+          </p>
+          <a href="mailto:koladeleolaitan@gmail.com" class="btn hero-btn">
+            Hire Me!
+          </a>
+        </div>
+
+        <div class="hero-second-half">
+          <img src="assets/Koladele-Olaitan.png" alt="Koladele Olaitan Image" />
+        </div>
+
+        <!-- ==== rotating frontend developer image ==== -->
+        <div class="hero-rotator">
+          <img
+            src="assets/frontend-l.png"
+            alt="Koladele Olaitan - Frontend Developer"
+          />
+        </div>
+      </div>
+
+      <!-- ==== Skills ==== -->
+      <div class="skills">
+        <div class="skill-title">
+          <h2 class="subheading">
+            <span class="star"><img src="assets/star-l.svg" alt="Star" /></span>
+            Skills
+          </h2>
+        </div>
+        <div class="skill-list">
+          <div class="skill-slider">
+            <h3 class="skill">
+              HTML5
+              <span><img src="assets/skill-line.svg" alt="Skill Line" /></span>
+            </h3>
+
+            <h3 class="skill">
+              CSS3 (Sass)
+              <span><img src="assets/skill-line.svg" alt="Skill Line" /></span>
+            </h3>
+
+            <h3 class="skill">
+              JavaScript
+              <span><img src="assets/skill-line.svg" alt="Skill Line" /></span>
+            </h3>
+
+            <h3 class="skill">
+              React (Learning)
+              <span><img src="assets/skill-line.svg" alt="Skill Line" /></span>
+            </h3>
+
+            <h3 class="skill">
+              Bootstrap
+              <span><img src="assets/skill-line.svg" alt="Skill Line" /></span>
+            </h3>
+
+            <h3 class="skill">
+              WordPress
+              <span><img src="assets/skill-line.svg" alt="Skill Line" /></span>
+            </h3>
+
+            <h3 class="skill">
+              Elementor
+              <span><img src="assets/skill-line.svg" alt="Skill Line" /></span>
+            </h3>
+
+            <h3 class="skill">
+              On-page SEO
+              <span><img src="assets/skill-line.svg" alt="Skill Line" /></span>
+            </h3>
+
+            <h3 class="skill">
+              Responsive Web Design
+              <span><img src="assets/skill-line.svg" alt="Skill Line" /></span>
+            </h3>
+          </div>
+        </div>
+      </div>
+
+      <!-- ==== Projects ==== -->
+      <div id="projects">
+        <h2 class="subheading">
+          <span class="star"><img src="assets/star-l.svg" alt="Star" /></span>
+          Skills
+        </h2>
+
+        <div class="projects-container">
+          <div class="project-timeline">
+            <div class="project-number" data-project-number="1">1</div>
+            <div class="timeline-path" data-timeline-number="1">
+              <div class="timeline-fill"></div>
+            </div>
+
+            <div class="project-number" data-project-number="2">2</div>
+            <div class="timeline-path" data-timeline-number="2">
+              <div class="timeline-fill"></div>
+            </div>
+
+            <div class="project-number" data-project-number="3">3</div>
+            <div class="timeline-path" data-timeline-number="3">
+              <div class="timeline-fill"></div>
+            </div>
+
+            <div class="project-number" data-project-number="4">4</div>
+            <div class="timeline-path" data-timeline-number="4">
+              <div class="timeline-fill"></div>
+            </div>
+
+            <div class="project-number" data-project-number="5">5</div>
+            <div class="timeline-path" data-timeline-number="5">
+              <div class="timeline-fill"></div>
+            </div>
+          </div>
+
+          <div class="project-cards-container">
+            <div class="project-cards-list">
+              <div class="project-card" data-project="1">
+                <div class="project-img">
+                  <img src="assets/project.png" alt="Project Image" />
+                </div>
+
+                <div class="project-details">
+                  <h3 class="project-name">Emmanuel Adeleye (Portfolio)</h3>
+                  <p class="project-desc">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Quas impedit facere eveniet rerum reprehenderit et provident
+                    iste, eligendi veniam voluptas.
+                  </p>
+                  <div class="project-tools">
+                    <span>HTML5</span>
+                    <span>CSS</span>
+                    <span>JavaScript</span>
+                  </div>
+                </div>
+              </div>
+
+              <div class="project-card" data-project="2">
+                <div class="project-img">
+                  <img src="assets/project.png" alt="Project Image" />
+                </div>
+
+                <div class="project-details">
+                  <h3 class="project-name">Emmanuel Adeleye (Portfolio)</h3>
+                  <p class="project-desc">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Quas impedit facere eveniet rerum reprehenderit et provident
+                    iste, eligendi veniam voluptas.
+                  </p>
+                  <div class="project-tools">
+                    <span>HTML5</span>
+                    <span>CSS</span>
+                    <span>JavaScript</span>
+                  </div>
+                </div>
+              </div>
+
+              <div class="project-card" data-project="3">
+                <div class="project-img">
+                  <img src="assets/project.png" alt="Project Image" />
+                </div>
+
+                <div class="project-details">
+                  <h3 class="project-name">Emmanuel Adeleye (Portfolio)</h3>
+                  <p class="project-desc">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Quas impedit facere eveniet rerum reprehenderit et provident
+                    iste, eligendi veniam voluptas.
+                  </p>
+                  <div class="project-tools">
+                    <span>HTML5</span>
+                    <span>CSS</span>
+                    <span>JavaScript</span>
+                  </div>
+                </div>
+              </div>
+
+              <div class="project-card" data-project="4">
+                <div class="project-img">
+                  <img src="assets/project.png" alt="Project Image" />
+                </div>
+
+                <div class="project-details">
+                  <h3 class="project-name">Emmanuel Adeleye (Portfolio)</h3>
+                  <p class="project-desc">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Quas impedit facere eveniet rerum reprehenderit et provident
+                    iste, eligendi veniam voluptas.
+                  </p>
+                  <div class="project-tools">
+                    <span>HTML5</span>
+                    <span>CSS</span>
+                    <span>JavaScript</span>
+                  </div>
+                </div>
+              </div>
+
+              <div class="project-card" data-project="5">
+                <div class="project-img">
+                  <img src="assets/project.png" alt="Project Image" />
+                </div>
+
+                <div class="project-details">
+                  <h3 class="project-name">Emmanuel Adeleye (Portfolio)</h3>
+                  <p class="project-desc">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Quas impedit facere eveniet rerum reprehenderit et provident
+                    iste, eligendi veniam voluptas.
+                  </p>
+                  <div class="project-tools">
+                    <span>HTML5</span>
+                    <span>CSS</span>
+                    <span>JavaScript</span>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <button class="btn load-project">Load More</button>
+          </div>
+        </div>
+      </div>
+
+      <!-- ==== contact ==== -->
+      <div id="contact">
+        <div class="contact-first-half">
+          <h2 class="subheading">
+            <span><img src="assets/star-l.svg" alt="Star" /></span>
+            Reach Out
+          </h2>
+          <p>For jobs, gigs, contracts, collaborations or enquires.</p>
+          <div class="contact-form">
+            <form action="">
+              <input type="text" id="name" />
+              <label for="name">Name</label>
+              <input type="email" id="email" />
+              <label for="email">Name</label>
+              <textarea name="message" id="" rows="5"></textarea>
+              <label for="message"></label>
+              <input type="submit" value="Send Message" />
+            </form>
+          </div>
+        </div>
+        <div class="contact-second-half">
+          <img src="assets/contact-l.png" alt="" />
+        </div>
+      </div>
+
+      <footer>
+        <p>
+          &copy;
+          <a href="https://www.linkedin.com/in/koladeleolaitan/">
+            Koladele Olaitan
+          </a>
+          - All Rights Reserved.
+        </p>
+      </footer>
+    </div>
   </body>
 </html>
