--- a/index.html
+++ b/index.html
@@ -30,6 +30,37 @@
     <!-- <script src="js/main.js" defer></script> -->
   </head>
   <body>
+    <!-- ==== sidebar ==== -->
+    <div class="sidebar">
+      <div class="theme-toggle">
+        <img src="assets/theme-l.svg" alt="Theme toggle" />
+      </div>
+      <div class="page-progress-path">
+        <div class="pp-bar"></div>
+      </div>
+      <div class="sidebar-social-links">
+        <div class="s-link">
+          <a href="https://twitter.com/publikphigor" class="s-link-inner">
+            <img src="assets/twitter-l.svg" alt="Twiter Icon" />
+          </a>
+        </div>
+
+        <div class="s-link">
+          <a
+            href="https://www.linkedin.com/in/koladeleolaitan/"
+            class="s-link-inner"
+          >
+            <img src="assets/linkedin-l.svg" alt="LinkedIn Icon" />
+          </a>
+        </div>
+
+        <div class="s-link">
+          <a href="https://github.com/publikphigor/" class="s-link-inner">
+            <img src="assets/github-l.svg" alt="GitHub Icon" />
+          </a>
+        </div>
+      </div>
+    </div>
     <!-- ==== container ==== -->
     <div class="top-line"></div>
     <div class="bottom-line"></div>
