--- a/index.html
+++ b/index.html
@@ -105,6 +105,67 @@
       </div>
     </header>
 
+    <!-- ==== mobile header -->
+
+    <div class="mobile-header">
+      <div class="mobile-header-inner">
+        <div class="m-logo">
+          <a href="index.html">
+            <img
+              src="assets/logo-l.png"
+              alt="Koladele Olaitan Portfolio Logo"
+            />
+          </a>
+        </div>
+        <div class="burger">
+          <div class="line-1"></div>
+          <div class="line-2"></div>
+        </div>
+      </div>
+    </div>
+
+    <div class="mobile-navbar">
+      <div class="mobile-navbar-inner">
+        <ul>
+          <li><a href="#about">About Me</a></li>
+          <li><a href="#projects">Projects</a></li>
+          <li>
+            <a href="https://publikphigor.me/blog/" target="_blank">My Blog</a>
+          </li>
+        </ul>
+        <div class="mobile-social-links">
+          <div class="s-link">
+            <a
+              href="https://twitter.com/publikphigor"
+              class="s-link-inner twitter-icon"
+            >
+              <img src="assets/twitter-l.svg" alt="Twiter Icon" />
+            </a>
+          </div>
+
+          <div class="s-link">
+            <a
+              href="https://www.linkedin.com/in/koladeleolaitan/"
+              class="s-link-inner linkedin-icon"
+            >
+              <img src="assets/linkedin-l.svg" alt="LinkedIn Icon" />
+            </a>
+          </div>
+
+          <div class="s-link">
+            <a
+              href="https://github.com/publikphigor/"
+              class="s-link-inner github-icon"
+            >
+              <img src="assets/github-l.svg" alt="GitHub Icon" />
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="overlay"></div>
+
     <!-- ==== container ==== -->
     <div class="main-container">
       <!-- ==== Hero ==== -->
@@ -290,7 +351,7 @@
               <img src="assets/link-l.svg" alt="Link" />
             </div>
             <div class="project-cards-list">
-              <div class="project-card" data-project="1">
+              <a href="" class="project-card" data-project="1">
                 <div class="project-img">
                   <img src="assets/project.png" alt="Project Image" />
                 </div>
@@ -308,9 +369,9 @@
                     <span>JavaScript</span>
                   </div>
                 </div>
-              </div>
+              </a>
 
-              <div class="project-card" data-project="2">
+              <a href="" class="project-card" data-project="2">
                 <div class="project-img">
                   <img src="assets/project.png" alt="Project Image" />
                 </div>
@@ -328,9 +389,9 @@
                     <span>JavaScript</span>
                   </div>
                 </div>
-              </div>
+              </a>
 
-              <div class="project-card" data-project="3">
+              <a href="" class="project-card" data-project="3">
                 <div class="project-img">
                   <img src="assets/project.png" alt="Project Image" />
                 </div>
@@ -348,9 +409,9 @@
                     <span>JavaScript</span>
                   </div>
                 </div>
-              </div>
+              </a>
 
-              <div class="project-card" data-project="4">
+              <a href="" class="project-card" data-project="4">
                 <div class="project-img">
                   <img src="assets/project.png" alt="Project Image" />
                 </div>
@@ -368,9 +429,9 @@
                     <span>JavaScript</span>
                   </div>
                 </div>
-              </div>
+              </a>
 
-              <div class="project-card" data-project="5">
+              <a href="" class="project-card" data-project="5">
                 <div class="project-img">
                   <img src="assets/project.png" alt="Project Image" />
                 </div>
@@ -388,9 +449,13 @@
                     <span>JavaScript</span>
                   </div>
                 </div>
-              </div>
+              </a>
 
-              <div class="project-card hide hidden-project" data-project="6">
+              <a
+                href=""
+                class="project-card hide hidden-project"
+                data-project="6"
+              >
                 <div class="project-img">
                   <img src="assets/project.png" alt="Project Image" />
                 </div>
@@ -408,9 +473,13 @@
                     <span>JavaScript</span>
                   </div>
                 </div>
-              </div>
+              </a>
 
-              <div class="project-card hide hidden-project" data-project="7">
+              <a
+                href=""
+                class="project-card hide hidden-project"
+                data-project="7"
+              >
                 <div class="project-img">
                   <img src="assets/project.png" alt="Project Image" />
                 </div>
@@ -428,9 +497,13 @@
                     <span>JavaScript</span>
                   </div>
                 </div>
-              </div>
+              </a>
 
-              <div class="project-card hide hidden-project" data-project="8">
+              <a
+                href=""
+                class="project-card hide hidden-project"
+                data-project="8"
+              >
                 <div class="project-img">
                   <img src="assets/project.png" alt="Project Image" />
                 </div>
@@ -448,7 +521,7 @@
                     <span>JavaScript</span>
                   </div>
                 </div>
-              </div>
+              </a>
             </div>
             <button class="btn load-project">Load More</button>
           </div>
@@ -457,7 +530,7 @@
 
       <!-- ==== contact ==== -->
       <div id="contact">
-        <div class="contact-first-half">
+        <div class="contact-first-half order-2">
           <h2 class="subheading">
             <span class="star"><img src="assets/star-l.svg" alt="Star" /></span>
             Reach Out
@@ -500,7 +573,7 @@
             </form>
           </div>
         </div>
-        <div class="contact-second-half">
+        <div class="contact-second-half order-1">
           <img src="assets/contact-l.png" alt="" />
         </div>
       </div>
