--- a/index.html
+++ b/index.html
@@ -117,6 +117,9 @@
             />
           </a>
         </div>
+        <div class="theme-toggle-mobile dark">
+          <img src="assets/theme-d.svg" alt="Theme toggle" />
+        </div>
         <div class="burger">
           <div class="line-1"></div>
           <div class="line-2"></div>
@@ -137,7 +140,7 @@
           <div class="s-link">
             <a
               href="https://twitter.com/publikphigor"
-              class="s-link-inner twitter-icon"
+              class="s-link-inner twitter-icon-m"
             >
               <img src="assets/twitter-l.svg" alt="Twiter Icon" />
             </a>
@@ -146,7 +149,7 @@
           <div class="s-link">
             <a
               href="https://www.linkedin.com/in/koladeleolaitan/"
-              class="s-link-inner linkedin-icon"
+              class="s-link-inner linkedin-icon-m"
             >
               <img src="assets/linkedin-l.svg" alt="LinkedIn Icon" />
             </a>
@@ -155,7 +158,7 @@
           <div class="s-link">
             <a
               href="https://github.com/publikphigor/"
-              class="s-link-inner github-icon"
+              class="s-link-inner github-icon-m"
             >
               <img src="assets/github-l.svg" alt="GitHub Icon" />
             </a>
